--- a/client/components/organisms/TopPageImage.module.scss
+++ b/client/components/organisms/TopPageImage.module.scss
@@ -2,14 +2,13 @@
   position: relative;
 }
 
-.divSample {
+.bgImageCaontainer {
   height: auto;
   width: 100%;
   aspect-ratio: 3 / 1;
 }
 
-.textSample {
-  font-size: 5rem;
+.titleImageContainer {
   left: 50%;
   position: absolute;
   top: 50%;
